EphyEncodingDialog: Use activate-on-single-click.

https://bugzilla.gnome.org/show_bug.cgi?id=759164